fix: safari flickering issue try - 2

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -160,9 +160,7 @@ section.intro .intro__title-container {
   margin-top: 16vh;
   width: 100%;
   max-width: var(--dimension-max-width);
-  opacity: 0;
-  transform: translateY(40px);
-  -webkit-transform: translateY(40px);
+  transition: transform ease-out 1s, opacity ease-out 2s;
 
   /* Safari Flickering */
   backface-visibility: hidden;
@@ -202,6 +200,11 @@ section.intro .intro__scroll-indicator {
   bottom: 16px;
   z-index: 1;
   align-items: center;
+  transition: opacity 0.5s;
+}
+
+section.intro .intro__scroll-indicator-label {
+  display: block;
   background: linear-gradient(
     -80deg,
     rgba(255, 255, 255, 0.4),
@@ -217,7 +220,6 @@ section.intro .intro__scroll-indicator {
   animation-name: glow;
   animation-duration: 4s;
   animation-iteration-count: infinite;
-  transition: opacity 0.5s;
 }
 
 @keyframes glow {
@@ -261,8 +263,8 @@ section.intro .intro__scroll-indicator.--hidden {
 }
 
 .--loaded section.intro .intro__title-container {
-  opacity: 1;
-  transform: translateY(0px);
+  opacity: 1 !important;
+  transform: translateY(0px) !important;
 }
 
 /* 브릿지 섹션 */
@@ -366,6 +368,7 @@ section.products .products__item-info-subtitle {
 
 section.products .products__item-info-title {
   margin-left: -4px;
+  white-space: nowrap;
   font-size: 64px;
   font-weight: 700;
   line-height: 130%;
@@ -387,12 +390,19 @@ section.products .products__item-info-more {
 }
 
 section.products .products__item-image-container {
+  position: relative;
   flex: 1;
   overflow: hidden;
 }
 
 section.products .products__item-image {
-  flex: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
